--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,6 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)\Output'
-    ArtifactName: 'LOlivierPacked'
+    ArtifactName: 'LOlivierDU'
     publishLocation: 'Container'
     
